# casino

./: Cargo.toml  LICENSE  README.md
.forgejo/workflows/: rust.yml
src/: blackjack.rs  cards.rs  config.rs  craps.rs  lib.rs  main.rs  money.rs  roulette.rs  slots.rs  statistics.rs  tui.rs
src/tui/: blackjack.rs
