[package]
name = "casino"
description = "A casino built right into your terminal"
version = "0.1.0"
edition = "2021"
authors = ["Rosa Richter"]
readme = "README.md"
repository = "https://github.com/Cantido/casino"
license = "MIT"
categories = ["command-line-utilities", "games"]
keywords = ["gambling", "blackjack", "card_games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
directories = "5.0.1"
inquire = "0.6.2"
rand = "0.8.5"
rust_decimal = { version = "1.33.1", features = ["serde-with-str"] }
serde = { version = "1.0.193", features = ["derive"] }
spinners = "4.1.1"
toml = { version = "0.8.8", features = ["display", "parse"] }
