[package]
name = "casino"
description = "A casino built right into your terminal"
version = "0.2.0"
edition = "2021"
authors = ["Rosa Richter"]
readme = "README.md"
repository = "https://github.com/Cantido/casino"
license = "AGPL-3.0-or-later"
categories = ["command-line-utilities", "games"]
keywords = ["gambling", "blackjack", "card_games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
directories = "5.0.1"
inquire = "0.6.2"
itertools = "0.12.1"
num = { version = "0.4.1", features = ["serde"] }
rand = "0.8.5"
ratatui = "0.26.2"
rust_decimal = { version = "1.33.1", features = ["serde-with-str", "maths"] }
serde = { version = "1.0.193", features = ["derive"] }
spinners = "4.1.1"
toml = { version = "0.8.8", features = ["display", "parse"] }
